@@ -524,4 +524,6 @@ contributors:
 
 * Marcin Kurczewski (rr-): contributor
 
+* Eisuke Kawashima (e-kwsm): contributor
+
 * Daniel van Noord (DanielNoord): contributor
