@@ -36,6 +36,8 @@ import os
 import pickle
 import sys
 
+import appdirs
+
 from pylint.config.configuration_mixin import ConfigurationMixIn
 from pylint.config.find_default_config_files import find_default_config_files
 from pylint.config.man_help_formatter import _ManHelpFormatter
@@ -63,7 +65,15 @@ if "PYLINTHOME" in os.environ:
 elif USER_HOME == "~":
     PYLINT_HOME = ".pylint.d"
 else:
-    PYLINT_HOME = os.path.join(USER_HOME, ".pylint.d")
+    PYLINT_HOME = appdirs.user_cache_dir("pylint")
+
+    old_home = os.path.join(USER_HOME, ".pylint.d")
+    if os.path.exists(old_home):
+        print(
+            f"PYLINTHOME is now '{PYLINT_HOME}' but obsolescent '{old_home}' is found; "
+            "you can safely remove the latter",
+            file=sys.stderr,
+        )
 
 
 def _get_pdata_path(base_name, recurs):
